# UnitConverter_14

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  UnitConverter.cpp
Prompting/: 001-20260520-report-github-agent-Prompt.md  002-20260521-git-branch-strategy-dual-track-tdd-Prompt.md  003-20260521-test-plan-catch2-meter-feet-Prompt.md  004-20260521-readme-red-todo-checklist-Prompt.md  005-20260521-report-archive-session-continuation-Prompt.md  006-20260521-catch2-tests-bce-green-Prompt.md  007-20260521-defect-list-qa-document-Prompt.md  009-20260521-tc-a-01-green-convert-from-input-Prompt.md  010-20260521-tc-a-02-green-colon-missing-invalid-argument-Prompt.md  011-20260521-tc-a-03-green-negative-invalid-argument-Prompt.md  012-20260521-tc-a-04-green-unknown-unit-invalid-argument-Prompt.md  013-20260521-tc-a-05-green-abc-invalid-argument-Prompt.md  014-20260521-tc-a-06-green-json-output-schema-Prompt.md  015-20260521-tc-a-07-green-zero-invalid-argument-Prompt.md  016-20260521-tc-b-01-green-meter-to-feet-convert-Prompt.md  017-20260521-tc-b-02-green-meter-to-yard-convert-Prompt.md  018-20260521-tc-b-03-green-feet-to-meter-convert-Prompt.md  019-20260521-tc-b-04-green-convert-all-meter-Prompt.md  020-20260521-tc-b-05-green-register-unit-cubit-Prompt.md  021-20260521-tc-b-06-green-load-config-valid-path-Prompt.md  022-20260521-tc-b-07-green-load-config-missing-path-Prompt.md  023-20260521-coverage-gate-domain-boundary-Prompt.md  024-20260521-golden-master-approval-regression-Prompt.md  025-20260521-readme-golden-master-regression-checklist-Prompt.md  026-20260521-refactor-application-bootstrap-console-error-writer-Prompt.md  027-20260521-full-test-coverage-verification-Prompt.md  030-20260521-phase6-report-gm-ci-readme-sync-Prompt.md  031-20260521-remove-workflow-commit-push-Prompt.md  032-20260521-bonus-decaying-unit-red-tests-Prompt.md  033-20260521-bonus-decaying-unit-green-register-unit-Prompt.md  034-20260521-full-test-coverage-bonus-verification-Prompt.md
Prompting_user/: 001-20260520-report-github-agent-User.md  002-20260521-git-branch-strategy-dual-track-tdd-User.md  (+30 more)
docs/: PRD.md  (+3 more)
(+88 files in other folders)
